--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -1,5 +1,9 @@
 Use a SymbolLabel class instead of ints and an array for labels
-
+  SymbolLabel is mutable (so we can refer to it in other symbols and then fill in the target detail later)
+  SymbolLabels form a doubly-linked list so that:
+    When we convert to string, we can include all the labels referring to that Symbol
+    We can remove a SymbolLabel from a list when its target changes
+  
 Implement generic types:
   Figure out exactly which atoms we want to have. Currently:
     atomTypeConstructorIdentifier
