--- a/Unity/todo.txt
+++ b/Unity/todo.txt
@@ -1,8 +1,30 @@
 Use a SymbolLabel class instead of ints and an array for labels
   SymbolLabel is mutable (so we can refer to it in other symbols and then fill in the target detail later)
-  SymbolLabels form a doubly-linked list so that:
-    When we convert to string, we can include all the labels referring to that Symbol
-    We can remove a SymbolLabel from a list when its target changes
+    SymbolLabel::Implementation corresponds to what we used to use integers for.
+  When outputting as a string:
+    Each Symbol::Implementation has an integer which identifies it in toString output
+      Only print it if there is at least one label pointing to it
+        Each Symbol::Implementation needs to keep a label count 
+  When inputting from a string:
+    Keep a hash table from int to Symbol::Implementation
+    How do we represent SymbolLabel identity?
+      Don't bother and just make a new SymbolLabel for each instance?
+    What are the uses of labels?
+      Resolving identifers to parameters, variable definitions and function definitions
+      Resolving type constructor identifiers to type constructor definition statements
+      Resolving template type specifiers to template class instantiations
+      Resolving stack machine labels to basic block labels
+        In each of these cases, both the label and its target have a canonical identity
+          Should we expand the concept of canonical identity?
+          Should we make Symbols mutable and do away with the Cache and SymbolLabel concepts altogether?
+            If we have Symbols s and t, it would be nice to be able to say:
+              s[2] = SymbolLabel(t)
+          You can pass Symbols around cheaply (because they are just handles to the canonical identities)
+          Modifying a Symbol modifies the canonical identities
+          Creating a Symbol creates a new canonical identity
+          In theory, could have Symbol.duplicate() which creates a new canonical identity as a copy of an old one, but haven't had a use for this yet.
+          This is rather like reference semantics in C# and Java.
+SymbolLabel really means Symbol::Implementation*
   
 Implement generic types:
   Figure out exactly which atoms we want to have. Currently:
