--- a/8088/todo.txt
+++ b/8088/todo.txt
@@ -28,3 +28,25 @@ Is the "RETF iw" timing correct? (Surely it shouldn't be less than RETF)
 Is the "TEST rmw,iw" timing correct? (Surely it shouldn't be the same as "TEST rmb,ib")
 
 Is the AF ever set after an OR operation?
+
+Sanity check the BCD instructions
+  Make sure they do the same thing as documented
+  Make sure they are useful for their purpose
+  Test them against real hardware
+  Try to figure out how the flags are defined
+
+Determine behavior of invalid opcodes:
+  6x
+
+stateALURegMemImmCalculate _wait=7 code seems odd - check if the real hardware does this
+
+When setting IP, need to abandon currently pending fetch
+  Reset abandon flag
+
+Find out what hardware does with "MOV rmw<->segreg" when modRMReg >= 4
+
+Find out what hardware does with LEA when mod == 3
+
+Make sure that "ES: POP [BX]" doesn't 
+
+Check that LDS and LES take the same time (HELPPC says LDS is 16+EA which can't be right)
