--- a/8088/demo/todo.txt
+++ b/8088/demo/todo.txt
@@ -1,14 +1,8 @@
-Write my own SID simulator that takes this data as input
-  Find out why no sound is being generated
-    Try wave writer?
-  Check that we don't use any frequencies too low for our player
-  Write it as a Source and plug it into the audio Sink
-    Just use nearest neighbour interpolation like sidplay currently does for now
-    Once that's working try band-limited interpolation from the 1MHz SID output and see how that sounds
-      If it sounds odd, try resampling some known-good 1MHz data (from a simple upsampling?)
-    See what resampling from 1-bit PWM 1.193MHz sounds like to get an idea of whine in demo
-    Try generating 256-element waveforms and change lists instead of sound
-      We'll have too many waveforms to begin with - write code to combine them
+Try band-limited interpolation from the 1MHz SID output and see how that sounds
+  If it sounds odd, try resampling some known-good 1MHz data (from a simple upsampling?)
+See what resampling from 1-bit PWM 1.193MHz sounds like to get an idea of whine in demo
+Try generating 256-element waveforms and change lists instead of sound
+  We'll have too many waveforms to begin with - write code to combine them
 mp3 player
   Use a genetic algorithm to evolve a solution for a given piece of music
     Can use breeding genomes method
@@ -34,4 +28,4 @@ mp3 player
         Number of changes per second
         Huffman coding of change
 
-
+Get DirectSoundSink and WaveOutSink working
