Full duplex parallel port IO

--- a/8088/dos/todo.txt
+++ b/8088/dos/todo.txt
@@ -69,66 +69,14 @@ TODO:
     Task display
     Hotkeys to switch these displays on and off
 
-
- !"#$%&'()*+,-./
-0123456789:;<=>?
-@ABCDEFGHIJKLMNO
-PQRSTUVWXYZ[\]^_
-`abcdefghijklmno
-pqrstuvwxyz{|}~
+Two types of process
+  Native processes - bounded memory, unloadable
+    Can be internal
+  Legacy processes
 
 
-      ***    ***   * *    *     *     *         *****       *****    **  ***    *      ** * * *
-     ** **  * * * *****  ***   ***   ***        *****  ***  *   *  **** *   *   **   ** *  ***
-     *   *  ***** ***** *****   *   *****   *   ** **  * *  * * * *  *   ***    * *  * ** ** **
-     * * *  ** **  ***   ***  *****   *         *****  ***  *   * *  *   ***  ***   ** **  ***
-      ***    ***    *     *     *    ***        *****       *****  **     *   ***   **    * * *
 
- *      *     *    * *   ****  ****         *     *     *     *     *                     *****
- **    **    ***   * *  * * * ****         ***   ***    *    **     **         * *    *   *****
- ***  ***     *    * *   ** *  * *          *   ***** ***** ***** ***** *     *****  ***   ***
- **    **    ***          * *  **** ****   ***    *    ***   **     **  *      * *  *****   *
- *      *     *    * *    * * ****  ****    *     *     *     *     *   *****       *****
-                                           ***
-        *    * *   * *   **** *   *  *     **     *     *    * *    *                         *
-        *    * *  ***** * *      *  * *    **    *       *   ***    *                        *
-        *          * *   ***    *    ** *  *     *       *  ***** *****       *****         *
-                  *****   * *  *    *  *         *       *   ***    *    **          **    *
-        *          * *  ****  *   *  ** *         *     *    * *    *    **          **   *
-                                                                         *
- ***    *    ***  ****     *  *****  ***  *****  ***   ***   **    **      *         *     ***
-*  **  **   *   *     *   **  *     *         * *   * *   *  **    **     *   *****   *   *   *
-* * *   *     **   ***   * *  ****  ****     *   ***   ****              *             *    **
-**  *   *    *        * *****     * *   *   *   *   *     *  **    **     *   *****   *
- ***   ***  ***** ****     *  ****   ***   *     ***   ***   **    **      *         *      *
-                                                                   *
- ***   ***  ****   **** ****  ***** *****  **** *   * ***** ***** *   * *     *   * *   *  ***
-* * * *   * *   * *     *   * *     *     *     *   *   *     *   *  *  *     ** ** **  * *   *
-** ** ***** ****  *     *   * ****  ****  * *** *****   *     *   ***   *     * * * * * * *   *
-* *** *   * *   * *     *   * *     *     *   * *   *   *     *   *  *  *     *   * *  ** *   *
- ***  *   * ****   **** ****  ***** *      **** *   * ***** **    *   * ***** *   * *   *  ***
+Memory management
+  Keep only most critical code and data in low memory
+  Keep non-critical stuff in high memory, guarded with a canary. On return to DOS, check canary and restore if it's overwritten
 
-****   ***  ****   **** ***** *   * *   * *   * *   * *   * *****  ***  *      ***    *
-*   * *   * *   * *       *   *   * *   * *   *  * *   * *     *   *     *       *   * *
-****  *   * ****   ***    *   *   * *   * * * *   *     *     *    *      *      *
-*     *  *  *   *     *   *   *   *  * *  * * *  * *    *    *     *       *     *
-*      ** * *   * ****    *    ***    *    * *  *   *   *   *****  ***      *  ***        ******
-
- **    ***  *               *  ***     **       *       *      *   *     *
- **       * ****   ****  **** *   *   *    **** *                  *     *    ** *  ***    ***
-  *    **** *   * *     *   * ****  ***** *   * ****    *      *   * *   *    * * * *  *  *   *
-      *   * *   * *     *   * *       *    **** *   *   *      *   **    *    * * * *  *  *   *
-       **** ****   ****  ****  ***    *       * *   *   *   *  *   * *   **   *   * *  *   ***
-                                           ***               **
-                         *                                          **    *    **    * *
-****   ***  * **   ***  ***   *  *  *   * *   * *  *  *  *  ****   *      *      *  * *     *
-*   * *   *  *  * **     *    *  *  *   * * * *  **   *  *    *   **             **        * *
-*   * *   *  *      **   * *  * **   * *  *****  **    ***   *     *      *      *        *   *
-****   **** ***   ***     *    * *    *    * *  *  *    *   ****    **    *    **         *****
-*         *                                           **
- **** *  *    **   ***   * *  **     ***
-*                                    * *   ***
-*     *  *   ***   ***   ***   ***   ***
- **** * **  ****  ***** ***** ***** *****
-  *    * *   ***   ****  ****  ****  ****
- **
