--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,14 +1,16 @@
-Pixels are all black
-Some colours are wrong
-Error not being diffused
+Make chart of all possible +HRES solid colours
+Try rose -HRES
+
 
 Try all 6 possibilites for overscanColour in AttributeClashImage constructor.
   Try black as well for monochrome images
     Also for monochrome try +BW, which is not the same
-Try 90+33 for tint instead of 103+18
 Make brightness, contrast, saturation and tint user-settable
 Refactor CalcThread with CalcThread in fractal.h as EndableThread?
   Make a BackgroundCalculationImage base class?
 Output image scaling
 Handle both +HRES and -HRES
   -HRES doesn't need coloured border
+
+Check that chroma colours match those from hardware
+  Why is yellow-burst so dark?
