Perceptual colour space visualizer

--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,31 +1,26 @@
+Write ConfigFile
+  (name "=" value ";")*
+  
+
 Fix up coloured border
   Always make output 640x200 centered
+
+Get RGB version working again, and see what the output looks like on composite
+  Try with both sRGB and perceptual
 
 Try all 6 possibilites for overscanColour in AttributeClashImage constructor.
   Try black as well for monochrome images
     Also for monochrome try +BW, which is not the same
 Make brightness, contrast, saturation and tint user-settable
+  Knobs?
+Have multiple windows: RGB output, NTSC output
+  MDI?
 Refactor CalcThread with CalcThread in fractal.h as EndableThread?
   Make a BackgroundCalculationImage base class?
 Output image scaling
-Need an input config file system
-  name = value;
-  Names:
-    inputPicture
-    outputNTSC
-    outputComposite
-    outputRGB
-    outputData
-    method
-    mode
-    hdots
-    scanlines
-    overscanColour
-    outputCompositeSize.x
-    outputCompositeSize.y
-    iterations
-Link in libpng
-  Put it in \projects\code? Static or dynamic? Just link against dll?
+  Scanlines
+    DirectX?
+Use libpng for input and output
 Test for repeated iterations
-Fix PerceptualModel and make an srgb model
 Fix RGB output for -HRES
+Add a Vector size for Windows::Params constructor
