--- a/8088/demo/cga/attribute_clash/todo.txt
+++ b/8088/demo/cga/attribute_clash/todo.txt
@@ -1,6 +1,10 @@
 ConfigFile
-  parseLValue()
-  parseExpression()
+  The values returned by the expression parsing functions should have the type
+   in slot 2, not passed into parseExpression()
+     And a Span for error messages?
+  Check for enum constants
+  Look up value in _options table
+  Check for structure constructor calls
 
 Fix up coloured border
   Always make output 640x200 centered
